급여등록 try,except부분 수정, 차량관리 화면 안나오던거 수정, 프론트 수정

--- a/dispatch/templates/dispatch/daily_driving_list.html
+++ b/dispatch/templates/dispatch/daily_driving_list.html
@@ -28,7 +28,9 @@
             <span>배차지시서 (호수별)</span>
         </div>
         <div class="headerCell">
-            <div>선택</div>
+            <div>
+                <input type="checkbox">
+            </div>
             <div>차량번호</div>
             <div>기사명</div>
             <div>출근</div>
