--- a/humanresource/templates/HR/member.html
+++ b/humanresource/templates/HR/member.html
@@ -159,9 +159,9 @@
         <span class="PopupDataTitle">입사일</span>
         <input name="entering_date" type="date" class="PopupDataInput PopupDataInputEntering">
       </div>
-      <div class="PopupDataCell">
+      <div class="PopupDataCell PopupDataCellLicense">
         <span class="PopupDataTitle">면허번호</span>
-        <input name="license_number" type="text" class="PopupDataInput" placeholder="'-'을 생략하고 입력해 주세요.">
+        <input name="license_number" type="text" class="PopupDataInput PopupDataInputLicense" placeholder="'-'을 생략하고 입력해 주세요.">
       </div>
       <div class="PopupDataCell">
         <span class="PopupDataTitle">휴대폰 번호</span>
