--- a/vehicle/templates/vehicle/list.html
+++ b/vehicle/templates/vehicle/list.html
@@ -322,8 +322,8 @@
             <div class="PopupDataCell">
                 <span class="PopupDataTitle">사용여부</span>
                 <select name="use" id="" class="PopupDataInput use">
-                    <option value="y">y</option>
-                    <option value="n">n</option>
+                    <option value="y">사용</option>
+                    <option value="n">미사용</option>
                 </select>
             </div>
             <div class="PopupDataCell">
