--- a/static/css/crudmember/calender.css
+++ b/static/css/crudmember/calender.css
@@ -154,7 +154,7 @@
     width: 3.2rem;
     height: 3.2rem;
     border-radius: 100%;
-    background-color: #707070;
+    background-color: #0069D9;
     color: white;
     cursor: pointer;
 }
@@ -175,23 +175,19 @@
     margin: 0.3rem 0;
 }
 
-.blockLink {
-    pointer-events: none;
-    cursor: default;
-}
-
 .dispatchCell {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 14rem;
+    width: 100%;
     height: 2.4rem;
     padding: 0 0.6rem;
     border-radius: 0.2rem;
     box-sizing: border-box;
     font-size: 1.4rem;
     cursor: pointer;
-    color: #C4C4C4;
+    color: black;
+    box-shadow: 0 0 0.2rem rgba(0, 0, 0, 0.3);
 }
 
 
