--- a/accounting/templates/accounting/income.html
+++ b/accounting/templates/accounting/income.html
@@ -100,5 +100,5 @@
 
 
 {% block script %}
-<script src="{% static 'js/accounting/salay.js' %}"></script>
+<script src="{% static 'js/accounting/income.js' %}"></script>
 {% endblock %}
