--- a/accounting/templates/accounting/salary.html
+++ b/accounting/templates/accounting/salary.html
@@ -127,7 +127,7 @@
             <div class="PopupDataCell">
                 <span class="PopupDataTitle">금액</span>
                 <div class="priceBox">
-                    <input name="price" type="text" class="PopupDataInput">
+                    <input name="price" type="text" class="PopupDataInput PopupDataInputPrice">
                 </div>
             </div>
             <div class="PopupDataCell">
