--- a/dispatch/templates/backup.html
+++ b/dispatch/templates/backup.html
@@ -184,6 +184,8 @@
         </tbody>
       </table>
     </div>
+    <div class="regularyCreatePopupResult">
+    </div>
     <div class="regularyCreatePopupBtnBox">
       <div class="btnModules">닫기</div>
       <input type="submit" class="btnModules" value="등록">
