--- a/dispatch/templates/dispatch/order.html
+++ b/dispatch/templates/dispatch/order.html
@@ -233,7 +233,7 @@
                       </td>
                     </tr>
                     {% endfor %}
-                  </tbody>
+                </tbody>
             </table>
         </div>
         <div class="regularyCreatePopupResult">
@@ -333,7 +333,7 @@
             </div>
             <div class="orderPopupDataCell">
                 <span class="orderPopupDataTitle">계약금액</span>
-                <input name="price" type="text" class="">
+                <input name="price" type="text" class="orderPopupDataDriverAllowance">
             </div>
             <div class="orderPopupDataCell">
                 <span class="orderPopupDataTitle">입금현황</span>
@@ -361,7 +361,7 @@
             </div>
             <div class="orderPopupDataCell">
                 <span class="orderPopupDataTitle">상여금</span>
-                <input name="driver_allowance" type="text" class="">
+                <input name="driver_allowance" type="text" class="orderPopupDataPrice">
             </div>
             <div class="orderPopupDataCell">
                 <span class="orderPopupDataTitle">상여금 선지급</span>
