--- a/dispatch/templates/dispatch/schedule.html
+++ b/dispatch/templates/dispatch/schedule.html
@@ -129,7 +129,7 @@
     <div class="popupBgModules"></div>
     <form class="popupContainer">
 
-        <div class="PopupTitle">배차등록</div>
+        <div class="PopupTitle">배차일정</div>
 
         <div class="PopupDataArea">
             <div class="PopupDataBox">
