--- a/vehicle/templates/vehicle/mgmt.html
+++ b/vehicle/templates/vehicle/mgmt.html
@@ -68,8 +68,8 @@
                     <tr class="insuranceTable">
                         <td class="{{vehicle.id}}">{{vehicle.vehicle_num0}} {{vehicle.vehicle_num}}</td>
                         <td>{{vehicle.driver_name}}</td>
-                        <td>회차</td>
-                        <td>금액</td>
+                        <td></td>
+                        <td></td>
                         <td>{{vehicle.insurance_expiry_date}}</td>
                         
                         <td>
@@ -87,7 +87,7 @@
 
 
     <div class="contentsAreaBox">
-        <div class="tableTitle">정기정검 만료예정 목록</div>
+        <div class="tableTitle">정기점검 만료예정 목록</div>
         <table class="tableHead">
             <thead>
                 <tr class="headerLine testTable">
