--- a/static/css/dispatch/document.css
+++ b/static/css/dispatch/document.css
@@ -60,6 +60,7 @@
 }
 
 .documentThead td:nth-child(4) {
+    text-align: center;
     width: 6%;
 }
 
@@ -124,6 +125,9 @@
 
 .documentTbody td:nth-child(3) {
     width: 18%;
+}
+.documentTbody td:nth-child(3) span{
+    white-space:nowrap;
 }
 
 .documentTbody td:nth-child(4) {
