--- a/dispatch/templates/dispatch/orderBackup.html
+++ b/dispatch/templates/dispatch/orderBackup.html
@@ -236,6 +236,8 @@
                 </tbody>
             </table>
         </div>
+        <div class="regularyCreatePopupResult">
+        </div>
         <div class="regularyCreatePopupBtnBox orderDispatchPopupBtnBox">
             <div class="btnModules">닫기</div>
             <input type="submit" class="btnModules" value="등록">
@@ -327,7 +329,7 @@
             </div>
             <div class="orderPopupDataCell">
                 <span class="orderPopupDataTitle">전화번호</span>
-                <input name="customer_phone" type="text" class="">
+                <input name="customer_phone" type="number" class="">
             </div>
             <div class="orderPopupDataCell">
                 <span class="orderPopupDataTitle">계약금액</span>
