--- a/dispatch/templates/dispatch/regularly_route.html
+++ b/dispatch/templates/dispatch/regularly_route.html
@@ -248,35 +248,21 @@
                         <input id="all" type="checkbox">
                         <label for="all">모두</label>
                     </div>
-                    <div class="dateArea">
-                      <div class="dateCell">
+                    <div>
                         <input name="week" value="월" id="mon" type="checkbox">
                         <label for="mon">월</label>
-                      </div>
-                      <div class="dateCell">
                         <input name="week" value="화" id="tue" type="checkbox">
                         <label for="tue">화</label>
-                      </div>
-                        <div class="dateCell">
                         <input name="week" value="수" id="wed" type="checkbox">
                         <label for="wed">수</label>
-                      </div>
-                        <div class="dateCell">
                         <input name="week" value="목" id="thu" type="checkbox">
                         <label for="thu">목</label>
-                      </div>
-                        <div class="dateCell">
                         <input name="week" value="금" id="fri" type="checkbox">
                         <label for="fri">금</label>
-                      </div>
-                        <div class="dateCell">
                         <input name="week" value="토" id="sat" type="checkbox">
                         <label for="sat">토</label>
-                      </div>
-                        <div class="dateCell">
                         <input name="week" value="일" id="sun" type="checkbox">
                         <label for="sun">일</label>
-                      </div>
                     </div>
                 </div>
             </div>
