--- a/vehicle/templates/vehicle/list.html
+++ b/vehicle/templates/vehicle/list.html
@@ -158,7 +158,7 @@
                 <span class="PopupDataTitle">차량번호</span>
                 <div class="vehicleNumBox">
                     <input name="vehicle_num0" type="text" class="PopupDataInput">
-                    <input name="vehicle_num" type="text" class="PopupDataInput">
+                    <input name="vehicle_num" type="number" class="PopupDataInput">
                 </div>
             </div>
             <div class="PopupDataCell">
@@ -190,7 +190,7 @@
             </div>
             <div class="PopupDataCell">
                 <span class="PopupDataTitle">연식</span>
-                <input name="model_year" type="text" class="PopupDataInput">
+                <input name="model_year" type="number" class="PopupDataInput">
             </div>
             <div class="PopupDataCell">
                 <span class="PopupDataTitle">출고일자</span>
