--- a/static/css/accounting/collect.css
+++ b/static/css/accounting/collect.css
@@ -25,7 +25,8 @@
 table tr {
     display: flex;
     width: 100%;
-    height: 4.8rem;
+    min-height: 4.8rem;
+    height: auto;
     border-bottom: 0.1rem solid #CDCDCE;
 }
 
