직원관리 권한구분 완료

--- a/humanresource/templates/HR/member.html
+++ b/humanresource/templates/HR/member.html
@@ -149,10 +149,12 @@
         <span class="PopupDataTitle">담당업무</span>
         <select name="role" id="" class="PopupDataInput PopupDataInputWork">
           <option value="">담당업무 선택</option>
+          <option value="용역">용역</option>
           <option value="운전원">운전원</option>
+          <option value="팀장">팀장</option>
           <option value="배차관리자">배차관리자</option>
           <option value="경리관리자">경리관리자</option>
-          <option value="팀장">팀장</option>
+          <option value="마스터">마스터</option>
         </select>
       </div>
       <div class="PopupDataCell">
@@ -206,10 +208,12 @@
       <div class="PopupDataCell">
         <span class="PopupDataTitle">담당업무</span>
         <select name="role" id="" class="PopupDataInput hrRole">
+          <option value="용역">용역</option>
           <option value="운전원">운전원</option>
+          <option value="팀장">팀장</option>
           <option value="배차관리자">배차관리자</option>
           <option value="경리관리자">경리관리자</option>
-          <option value="팀장">팀장</option>
+          <option value="마스터">마스터</option>
         </select>
       </div>
       <div class="PopupDataCell">
